--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.uplift">
-    <uses-permission android:name="android.permission.SET_ALARM"/>
+
+    <uses-permission android:name="android.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GetFrequencyActivity"></activity>
+        <activity android:name=".OpenedNotificationActivity"></activity>
+        <activity android:name=".GetFrequencyActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".GetNameActivity" />
         <activity android:name=".SignUpActivity" />
@@ -24,8 +26,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".ContentSelectionActivity"
-            android:label="@string/choose_categories"/>
+        <activity
+            android:name=".ContentSelectionActivity"
+            android:label="@string/choose_categories" />
+
         <receiver android:name=".MyBroadcastReceiver" />
     </application>
 
